[package]
name = "psd-to-png"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Jack T <jack@jackt.space>"]
description = "CLI tool to convert PSD files to PNGs"
repository = "https://github.com/jacktabscode/psd-to-png"
homepage = "https://github.com/jacktabscode/psd-to-png"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
image = "0.25.1"
psd = "0.3.5"
rayon = "1.10.0"
walkdir = "2.5.0"
